[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Decorations/light_b.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/DialogueNode.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.64744, 5.63508 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="DynamicFont" id=3]
size = 30

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="DynamicFont" id=5]
size = 40

[sub_resource type="DynamicFont" id=6]
size = 20

[node name="DialogueNode" type="Area2D"]
position = Vector2( 0, 1 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="dialogue_placer" type="CanvasLayer" parent="."]

[node name="text" type="Label" parent="dialogue_placer"]
material = SubResource( 2 )
margin_left = 3.0
margin_top = 125.0
margin_right = 2503.0
margin_bottom = 325.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 0.0
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speaker_name" type="Label" parent="dialogue_placer"]
visible = false
material = SubResource( 4 )
margin_left = 103.0
margin_top = 113.0
margin_right = 603.0
margin_bottom = 313.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 5 )
text = "name"
align = 1
valign = 1
autowrap = true
uppercase = true
max_lines_visible = 1

[node name="text_timer" type="Timer" parent="dialogue_placer"]
wait_time = 0.05

[node name="text_box" type="Sprite" parent="dialogue_placer"]
visible = false
modulate = Color( 0, 0, 0, 0.6 )
position = Vector2( 128, 130 )
scale = Vector2( 128, 15 )
z_index = -1
texture = ExtResource( 1 )

[node name="next" type="Label" parent="dialogue_placer"]
visible = false
material = SubResource( 4 )
margin_left = 219.0
margin_top = 110.0
margin_right = 726.0
margin_bottom = 310.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 6 )
text = "[e] next"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1
[connection signal="area_entered" from="." to="." method="_on_dialogue_node_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_dialogue_node_area_exited"]
[connection signal="timeout" from="dialogue_placer/text_timer" to="." method="_on_text_timer_timeout"]
